fix z-index for context menu

--- a/src/app.css
+++ b/src/app.css
@@ -857,7 +857,7 @@ input[type=button].disabled {
 	border: 1px solid var(--border);
 	box-shadow: black 0 0 3px 0;
 	background: #232323;
-	z-index: 3;
+	z-index: 5;
 }
 
 .context-menu.low {
